<resources>
    <string name="app_name">AQUA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_temperatur">Temperatur</string>
    <string name="menu_pH">PH</string>
    <string name="menu_waterlevel">Waterlevel</string>
    <string name="menu_test">Test</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="button">Button</string>
    <string name="channel_name">noti</string>
    <string name="channel_description">notehelp</string>
</resources>